upd publications fix

--- a/_publications/2023-dsm.md
+++ b/_publications/2023-dsm.md
@@ -3,6 +3,7 @@ title: "Deep Stochastic Mechanics"
 collection: publications
 #permalink: /publication/2010-10-01-paper-title-number-2
 # excerpt: 'We introduce a novel deep-learning-based approach for numerical simulation of a time-evolving Schrödinger equation inspired by stochastic mechanics and generative diffusion models. Depending on the latent dimension, our method may have far lower computational complexity in higher dimensions compared to existing approaches. Experiments verify our theoretical findings and show a significant advantage of our method compared to other deep-learning-based approaches used for quantum mechanics.'
+excerpt: ''
 date: 2023-10-04
 venue: 'arxiv'
 #paperurl: 'http://academicpages.github.io/files/paper2.pdf'
