--- a/_posts/2024-06-01-dsm.md
+++ b/_posts/2024-06-01-dsm.md
@@ -1,5 +1,5 @@
 ---
-title: 'Simulating Quantum Mechanics with Deep Learning: Deep Stochastic Mechanics'
+title: 'Deep Stochastic Mechanics'
 date: 2024-06-01
 permalink: /posts/24/06/dsm/
 tags:
@@ -21,8 +21,11 @@ Solving Schrödinger equation
 At the heart of quantum mechanics lies the **Schrödinger equation** (SE) for $0 < t \le T$ and $\forall x\in \mathbb{R}^d$: 
 
 $$
+\begin{align*}
     i \hbar \partial_{t} \psi (x, t) = \Big[-\frac{\hbar^2}{2m} \frac{\partial^2}{\partial x^2} + V(x, t)\Big] \psi(x, t), 
+\end{align*}
 $$
+
 given an initial condition 
 
 $$
@@ -35,34 +38,42 @@ The **probability density** of finding a particle at position $x$ at time $t$￼
 
 $$\rho(x,t) = |\psi (x, t)|^2.$$
 
+
 ---
-Goal: given an initial $\psi_0(x)$, draw samples from $|\psi (x, t)|^2$ for $t \in (0,T]$.  
+
+Goal: given an initial $\psi_0(x)$, draw samples from $|\psi (x, t)|^2$ for $t \in (0,T]$. 
 ---
+
+
 One of possible solutions is to directly solve the SE for $\psi (x, t)$ using, for example, finite difference methods. Another approach is Monte-Carlo methods that rely on random sampling. They use a variational ansatz (a parametrized wave function) to approximate the true wave function. Existing methods for solving the time-dependent SE face significant challenges: 
 * *Classical numerical solvers* require discretizing the problem on a grid, leading to an *exponential growth* in computational complexity as the dimensionality increases. 
 * *Physics-informed neural networks (PINNs)* are a NN-based version of numerical solver that also suffer from an *exponential growth* of collocation points.
 * Variational methods like *time-dependent Variational Monte Carlo (t-VMC)* can bypass the curse of dimensionality.  However, their accuracy heavily depends on choosing a suitable ansatz, which can be challenging for complex systems. Additionally, the optimization process used to find the optimal ansatz parameters may suffer from numerical instabilities, depending on the method and initial conditions.
-* 
-> What if we can directly sample from the density $|\psi (x, t)|^2$ without estimating a wave function $\psi (x, t)$?
+
+> What if we can directly sample from the density $\vert \psi (x, t)\vert^2$ without estimating a wave function $\psi(x, t)$?
 
 DSM method
 ======
 
-DSM takes a different approach by leveraging Nelson's stochastic mechanics [[Nelson, 1966]](https://journals.aps.org/pr/abstract/10.1103/PhysRev.150.1079), which establishes an equivalence between the time-dependent Schrödinger equation and a diffusion process. Assuming $\psi (x, t) = \sqrt{\rho(x, t)}e^{iS(x, t)}$, we define:
+DSM takes a different approach by leveraging Nelson's stochastic mechanics [[Nelson, 1966]](https://journals.aps.org/pr/abstract/10.1103/PhysRev.150.1079), which establishes an equivalence between the time-dependent Schrödinger equation and a diffusion process. Assuming $\psi (x, t) = \sqrt{\rho(x, t)}e^{iS(x, t)}$, we define
 
-$$ {\color{982715}
+$$ 
+{\color{982715}
 \begin{align*}
 \text{{ current velocity:}} &&
  v(x, t) &= \frac{\hbar}{m} \nabla S(x, t), \\
 \text{{ osmotic velocity:}} &&
  u(x, t) &= \frac{\hbar}{2m} \nabla \log \rho(x, t).
-\end{align*}} $$
+\end{align*}} 
+$$
+
 Our method relies on the following stochastic process:
+
 $$
     \mathrm{d}{\color{2D9090}X(t)} = \Big( {\color{982715}v} \big( {\color{2D9090}X(t)}, t \big)+ {\color{982715}u} \big({\color{2D9090}X(t)}, t \big) \Big)\mathrm{d}t + \sqrt{\frac{ \hbar}{m} }\mathrm{d} W, \qquad {\color{2D9090}X(0)} \sim \big|\psi_{0}\big|^2,
 $$
 
-which **corresponds to sampling from** $\rho = \big|\psi (x, t)\big|^2$; where $u$ is an osmotic velocity, $v$ is a current velocity and $\overset{\rightarrow}{W}$ is a standard (forward) Wiener process. Process $X(t)$ is called the *Nelsonian process*.
+which **corresponds to sampling from** $\rho = \vert \psi (x, t)\vert^2$; where $u$ is an osmotic velocity, $v$ is a current velocity and $\overset{\rightarrow}{W}$ is a standard (forward) Wiener process. Process $X(t)$ is called the *Nelsonian process*.
 
 
 We parametrize velocities $u, v$￼ via NNs, yielding a new process ${\color{2D9090}X^\theta(t)} \in \mathbb{R}^d$￼ that approximates the true process ￼$X(t)$:
@@ -108,8 +119,8 @@ These equations (1), (2) and (3) define
 
 $$
   \mathcal{L}_1 (v_{\theta}, u_{\theta}) = \Big\| \partial_{t} v_\theta +\frac{1}{m} \nabla V - \langle u_\theta, \nabla u_\theta\rangle + \langle v_\theta, \nabla v_\theta\rangle - \frac{\hbar}{2m} \nabla \big(\text{div }  u_\theta \big) \Big\|_2, 
-  $$
-  $$
+$$
+$$
   \mathcal{L}_2 (v_{\theta}, u_{\theta})
  = \Big \| \partial_{t} u_\theta + \nabla \langle v_\theta, u_\theta\rangle + \frac{\hbar}{2m} \nabla \big(\text{div }  v_\theta \big) \Big \|_2,
 $$
@@ -118,7 +129,7 @@ $$
 $$
 
 
-Then our loss function to minimize is $\mathcal{L} (v_{\theta}, u_{\theta}) = \sum_{i=1}^3 \mathcal{L}_i (v_{\theta}, u_{\theta})$.
+Then, our loss function to minimize is $\mathcal{L} (v_{\theta}, u_{\theta}) = \sum_{i=1}^3 \mathcal{L}_i (v_{\theta}, u_{\theta})$.
 
 
 * The trajectories are generated iteratively in time: $X^\theta_{i+1} = X^\theta_{i} + \big(v_{\theta}(X^\theta_{i}, t_{i})+ u_{\theta}(X^\theta_{i}, t_{i}) \big)\epsilon + z$.
@@ -129,8 +140,8 @@ Then our loss function to minimize is $\mathcal{L} (v_{\theta}, u_{\theta}) = \s
 
 </pre>
 
-![TT](../../../../images/DSM_plot.png?raw=true | width=10)
-\<div align="center"> (a) DSM training scheme: at every epoch $\tau$, we generate $B$ full trajectories $\{ X_{ij}\}_{ij}$, $i=0, ..., N$, $j=1, ..., B$. Then, we update the weights of our NNs.  (b) An illustration of sampled trajectories at the early epoch. (c) An illustration of sampled trajectories at the final epoch.  (d) Collocation points for a grid-based solver where it should predict values of $\psi(x, t)$. Blue regions in the plots correspond to higher-density regions.  </div>
+![F1](../../../../images/DSM_plot.png?raw=true | width=10)
+<div align="center">(a) DSM training scheme: at every epoch $\tau$, we generate $B$ full trajectories $\{ X_{ij}\}_{ij}$, $i=0, ..., N$, $j=1, ..., B$. Then, we update the weights of our NNs.  (b) An illustration of sampled trajectories at the early epoch. (c) An illustration of sampled trajectories at the final epoch.  (d) Collocation points for a grid-based solver where it should predict values of $\psi(x, t)$. Blue regions in the plots correspond to higher-density regions. </div>
 
 <pre>
 
@@ -145,11 +156,12 @@ Instead of explicitly estimating the wave function, DSM directly samples from th
 ### Theoretical guarantee
 
 
-**Theorem. (Strong convergence bound)**  We have the following bound between the processes $X$ (the Nelsonian process) and $X^\theta$ (its approximation with  $u_\theta, v_\theta$):
+**Theorem (Strong convergence bound)**  We have the following bound between the processes $X$ (the Nelsonian process) and $X^\theta$ (its approximation with  $u_\theta, v_\theta$):
 
 $$
 \sup_{t\le T} \mathbb{E}\|X(t) - X^\theta(t)\|^2 \le C_{T} \mathcal{L}(v_{\theta}, u_{\theta}),
 $$
+
 where the constant $C_T$ depends on a time horizon $T$ and Lipschitz constants of  $u, v, u_\theta, v_\theta$.
 
 This theorem means that optimizing the loss leads to a convergence of the neural process $X^\theta$ to the Nelsonian process  $X$, and that the loss value directly translates into an improvement of error between the processes.
@@ -178,8 +190,8 @@ where $g$ controls the interaction strength.
 
 </pre>
 
-![TT](../../../../images/tVMC-plots-camera-copy.pdf?raw=true | width=10)
-\<div align="center"> Simulation results for two interacting bosons in the harmonic oscillator.  </div>
+![F2](../../../../images/tVMC-plots-camera-copy.pdf?raw=true | width=10)
+<div align="center"> Simulation results for two interacting bosons in the harmonic oscillator. </div>
 
 <pre>
 
@@ -194,7 +206,7 @@ Let's try to run simulation for more particles:
 
 </pre>
 
-![TT](../../../../images/densities_compare_high_d.pdf?raw=true | width=10)
+![F3](../../../../images/densities_compare_high_d.pdf?raw=true | width=10)
 \<div align="center"> Probability density plots for different numbers of interacting particles $d$. For five particles, our computer system does not allow running the Crank-Nicolson solver. </div>
 
 <pre>
