--- a/_posts/2024-06-01-dsm.md
+++ b/_posts/2024-06-01-dsm.md
@@ -21,9 +21,7 @@ Solving Schrödinger equation
 At the heart of quantum mechanics lies the **Schrödinger equation** (SE) for $0 < t \le T$ and $\forall x\in \mathbb{R}^d$: 
 
 $$
-\begin{align*}
     i \hbar \partial_{t} \psi (x, t) = \Big[-\frac{\hbar^2}{2m} \frac{\partial^2}{\partial x^2} + V(x, t)\Big] \psi(x, t), 
-\end{align*}
 $$
 
 given an initial condition 
@@ -59,12 +57,10 @@ DSM takes a different approach by leveraging Nelson's stochastic mechanics [[Nel
 
 $$ 
 {\color{982715}
-\begin{align*}
 \text{{ current velocity:}} &&
- v(x, t) &= \frac{\hbar}{m} \nabla S(x, t), \\
+ v(x, t) = \frac{\hbar}{m} \nabla S(x, t), \\
 \text{{ osmotic velocity:}} &&
- u(x, t) &= \frac{\hbar}{2m} \nabla \log \rho(x, t).
-\end{align*}} 
+ u(x, t) = \frac{\hbar}{2m} \nabla \log \rho(x, t).
 $$
 
 Our method relies on the following stochastic process:
@@ -91,7 +87,9 @@ $$
 where $\epsilon > 0$ is a time step size, $0 \le i < \frac{T}{\epsilon}$, and ￼$z \sim \mathcal{N}\big(0, \frac{\hbar}{m}  \epsilon I_{d}\big)$.
 
 ---
+
 Given trained velocities $u_\theta, v_\theta$, and the initial condition $X_0 \sim |\psi_{0}|^2$, we can produce samples from ￼$\rho$.
+
 ---
 
 
@@ -129,7 +127,11 @@ $$
 $$
 
 
-Then, our loss function to minimize is $\mathcal{L} (v_{\theta}, u_{\theta}) = \sum_{i=1}^3 \mathcal{L}_i (v_{\theta}, u_{\theta})$.
+Then, our loss function to minimize is 
+
+$$
+  \mathcal{L} (v_{\theta}, u_{\theta}) = \sum_{i=1}^3 \mathcal{L}_i (v_{\theta}, u_{\theta})
+$$.
 
 
 * The trajectories are generated iteratively in time: $X^\theta_{i+1} = X^\theta_{i} + \big(v_{\theta}(X^\theta_{i}, t_{i})+ u_{\theta}(X^\theta_{i}, t_{i}) \big)\epsilon + z$.
@@ -140,7 +142,7 @@ Then, our loss function to minimize is $\mathcal{L} (v_{\theta}, u_{\theta}) = \
 
 </pre>
 
-![F1](../../../../images/DSM_plot.png?raw=true | width=10)
+![F1](../../../../images/DSM_plot.pdf?raw=true | width=10)
 <div align="center">(a) DSM training scheme: at every epoch $\tau$, we generate $B$ full trajectories $\{ X_{ij}\}_{ij}$, $i=0, ..., N$, $j=1, ..., B$. Then, we update the weights of our NNs.  (b) An illustration of sampled trajectories at the early epoch. (c) An illustration of sampled trajectories at the final epoch.  (d) Collocation points for a grid-based solver where it should predict values of $\psi(x, t)$. Blue regions in the plots correspond to higher-density regions. </div>
 
 <pre>
@@ -149,7 +151,7 @@ Then, our loss function to minimize is $\mathcal{L} (v_{\theta}, u_{\theta}) = \
 
 ---
 
-Instead of explicitly estimating the wave function, DSM directly samples from the probability density of the wave function by parametrizing the velocities of the diffusion process using neural networks.
+Instead of explicitly estimating the wave function $\psi(x, t)$, DSM directly samples from the probability density $\vert \psi(x, t)\vert^2$ by parametrizing the velocities of the diffusion process using neural networks.
 ---
 
 
