--- a/_posts/2024-06-01-dsm.md
+++ b/_posts/2024-06-01-dsm.md
@@ -60,7 +60,7 @@ $$
 \text{{ current velocity:}} &&
  v(x, t) = \frac{\hbar}{m} \nabla S(x, t), \\
 \text{{ osmotic velocity:}} &&
- u(x, t) = \frac{\hbar}{2m} \nabla \log \rho(x, t).
+ u(x, t) = \frac{\hbar}{2m} \nabla \log \rho(x, t)}.
 $$
 
 Our method relies on the following stochastic process:
@@ -95,13 +95,13 @@ Given trained velocities $u_\theta, v_\theta$, and the initial condition $X_0 \s
 
 ### How to train velocities $u_\theta, v_\theta$?
 
-the Schrödinger equation tells us the velocities should satisfy
+The Schrödinger equation tells us the velocities should satisfy
 
 $$
 \begin{align}
-\partial_{t} v_\theta &= -\frac{1}{m} \nabla V + \langle u_\theta, \nabla u_\theta \rangle - \langle v_\theta, \nabla v_\theta \rangle + \frac{\hbar}{2m} \nabla \big(\text{div }  u_\theta \big) &&&& \label{eq1}\tag{1}
+\partial_{t} v_\theta &= -\frac{1}{m} \nabla V + \langle u_\theta, \nabla u_\theta \rangle - \langle v_\theta, \nabla v_\theta \rangle + \frac{\hbar}{2m} \nabla \big(\text{div }  u_\theta \big) &&&& \label{eq1}\
 \\
-\partial_{t} u_\theta &=  - \nabla \langle v_\theta, u_\theta\rangle - \frac{\hbar}{2m} \nabla \big(\text{div }  v_\theta \big)&&&& \label{eq2}\tag{3}
+\partial_{t} u_\theta &=  - \nabla \langle v_\theta, u_\theta\rangle - \frac{\hbar}{2m} \nabla \big(\text{div }  v_\theta \big)&&&& \label{eq2}
 \end{align}
 $$
 
@@ -110,7 +110,7 @@ where $\nabla = \Big(\frac{\partial}{\partial x_{1}} , \ldots,\frac{\partial}{\p
 Additionally, the initial velocities should follow the initial conditions
 
 $$
-v_\theta(x, 0) = \frac{\hbar}{m}\nabla S_0(x) \quad \text{and} \quad u_\theta(x, 0) = \frac{\hbar}{2m}  \nabla \log \rho_0(x) \label{eq:ic}\tag{3}
+v_\theta(x, 0) = \frac{\hbar}{m}\nabla S_0(x) \quad \text{and} \quad u_\theta(x, 0) = \frac{\hbar}{2m}  \nabla \log \rho_0(x) \label{eq:ic}
 $$
 
 These equations (\ref{eq1}), (\ref{eq2}) and (\ref{eq:ic}) define 
@@ -162,9 +162,9 @@ Instead of explicitly estimating the wave function $\psi(x, t)$, DSM directly sa
 **Theorem (Strong convergence bound)**  We have the following bound between the processes $X$ (the Nelsonian process) and $X^\theta$ (its approximation with  $u_\theta, v_\theta$):
 
 $$
-  \begin{aligned*}
+  \begin{align*}
     \sup_{t\le T} \mathbb{E}\|X(t) - X^\theta(t)\|^2 \le C_{T} \mathcal{L}(v_{\theta}, u_{\theta}),
-  \end{aligned*}
+  \end{align*}
 $$
 
 where the constant $C_T$ depends on a time horizon $T$ and Lipschitz constants of  $u, v, u_\theta, v_\theta$.
@@ -176,19 +176,19 @@ This theorem means that optimizing the loss leads to a convergence of the neural
 Interacting bosons in a harmonic potential:
 
 $$
-\begin{equation*}
+\begin{align*}
   V(x, t) = \sum_i \frac{1}{2} m \omega^2 x_i^2 + \frac{1}{2} g \sum_{i, j} \frac{1}{\sqrt{2 \pi \sigma^2}} e^{-(x_i - x_j)^2 / 2 \sigma^2}, 
-\end{equation*}
+\end{align*}
 }
 $$
 
 with an initial condition 
 
 $$
-\begin{equation*}
-  \psi(x, 0) = e^{-\omega^2x^2/(2\hbar)}.
-\end{equation*}
-$$,
+\begin{align*}
+  \psi(x, 0) = e^{-\omega^2x^2/(2\hbar)},
+\end{align*}
+$$
 
 where $g$ controls the interaction strength. 
 
