dsm equation fix

--- a/_posts/2024-06-01-dsm.md
+++ b/_posts/2024-06-01-dsm.md
@@ -56,11 +56,12 @@ DSM method
 DSM takes a different approach by leveraging Nelson's stochastic mechanics [[Nelson, 1966]](https://journals.aps.org/pr/abstract/10.1103/PhysRev.150.1079), which establishes an equivalence between the time-dependent Schrödinger equation and a diffusion process. Assuming $\psi (x, t) = \sqrt{\rho(x, t)}e^{iS(x, t)}$, we define
 
 $$ 
-{\color{982715}
+\begin{align*}
 \text{{ current velocity:}} &&
- v(x, t) = \frac{\hbar}{m} \nabla S(x, t), \\
+ v(x, t) &= \frac{\hbar}{m} \nabla S(x, t), \\
 \text{{ osmotic velocity:}} &&
- u(x, t) = \frac{\hbar}{2m} \nabla \log \rho(x, t)}.
+ u(x, t) &= \frac{\hbar}{2m} \nabla \log \rho(x, t).
+\end{align*}
 $$
 
 Our method relies on the following stochastic process:
@@ -159,7 +160,7 @@ Instead of explicitly estimating the wave function $\psi(x, t)$, DSM directly sa
 ### Theoretical guarantee
 
 
-**Theorem (Strong convergence bound)**  We have the following bound between the processes $X$ (the Nelsonian process) and $X^\theta$ (its approximation with  $u_\theta, v_\theta$):
+| **Theorem (Strong convergence bound)**  We have the following bound between the processes $X$ (the Nelsonian process) and $X^\theta$ (its approximation with  $u_\theta, v_\theta$):
 
 $$
   \begin{align*}
@@ -167,7 +168,7 @@ $$
   \end{align*}
 $$
 
-where the constant $C_T$ depends on a time horizon $T$ and Lipschitz constants of  $u, v, u_\theta, v_\theta$.
+where the constant $C_T$ depends on a time horizon $T$ and Lipschitz constants of  $u, v, u_\theta, v_\theta$. |
 
 This theorem means that optimizing the loss leads to a convergence of the neural process $X^\theta$ to the Nelsonian process  $X$, and that the loss value directly translates into an improvement of error between the processes.
 
