dsm equation fix2

--- a/_posts/2024-06-01-dsm.md
+++ b/_posts/2024-06-01-dsm.md
@@ -117,22 +117,19 @@ $$
 These equations (\ref{eq1}), (\ref{eq2}) and (\ref{eq:ic}) define 
 
 $$
-  \mathcal{L}_1 (v_{\theta}, u_{\theta}) = \Big\| \partial_{t} v_\theta +\frac{1}{m} \nabla V - \langle u_\theta, \nabla u_\theta\rangle + \langle v_\theta, \nabla v_\theta\rangle - \frac{\hbar}{2m} \nabla \big(\text{div }  u_\theta \big) \Big\|_2, 
-$$
-$$
-  \mathcal{L}_2 (v_{\theta}, u_{\theta})
- = \Big \| \partial_{t} u_\theta + \nabla \langle v_\theta, u_\theta\rangle + \frac{\hbar}{2m} \nabla \big(\text{div }  v_\theta \big) \Big \|_2,
-$$
-$$
-  \mathcal{L}_3 (v_{\theta}, u_{\theta}) = \| u_\theta (x, 0) - u_0(x) \|_2 + \| v_\theta (x, 0) - v_0(x) \|_2
+\begin{align}
+  \mathcal{L}_1 (v_{\theta}, u_{\theta}) &= \Big\| \partial_{t} v_\theta +\frac{1}{m} \nabla V - \langle u_\theta, \nabla u_\theta\rangle + \langle v_\theta, \nabla v_\theta\rangle - \frac{\hbar}{2m} \nabla \big(\text{div }  u_\theta \big) \Big\|_2, \\
+  \mathcal{L}_2 (v_{\theta}, u_{\theta}) &= \Big \| \partial_{t} u_\theta + \nabla \langle v_\theta, u_\theta\rangle + \frac{\hbar}{2m} \nabla \big(\text{div }  v_\theta \big) \Big \|_2,\\
+  \mathcal{L}_3 (v_{\theta}, u_{\theta}) &= \| u_\theta (x, 0) - u_0(x) \|_2 + \| v_\theta (x, 0) - v_0(x) \|_2
+\end{align}
 $$
 
 
 Then, our loss function to minimize is 
 
 $$
-  \mathcal{L} (v_{\theta}, u_{\theta}) = \sum_{i=1}^3 \mathcal{L}_i (v_{\theta}, u_{\theta})
-$$.
+  \mathcal{L} (v_{\theta}, u_{\theta}) = \sum_{i=1}^3 \mathcal{L}_i (v_{\theta}, u_{\theta}).
+$$
 
 
 
@@ -178,9 +175,8 @@ Interacting bosons in a harmonic potential:
 
 $$
 \begin{align*}
-  V(x, t) = \sum_i \frac{1}{2} m \omega^2 x_i^2 + \frac{1}{2} g \sum_{i, j} \frac{1}{\sqrt{2 \pi \sigma^2}} e^{-(x_i - x_j)^2 / 2 \sigma^2}, 
+  V(x, t) = \sum_i \frac{1}{2} m \omega^2 x_i^2 + \frac{1}{2} g \sum_{i, j} \frac{1}{\sqrt{2 \pi \sigma^2}} e^{-(x_i - x_j)^2 / 2 \sigma^2},
 \end{align*}
-}
 $$
 
 with an initial condition 
