dsm equation fix3

--- a/_posts/2024-06-01-dsm.md
+++ b/_posts/2024-06-01-dsm.md
@@ -57,9 +57,9 @@ DSM takes a different approach by leveraging Nelson's stochastic mechanics [[Nel
 
 $$ 
 \begin{align*}
-\text{{ current velocity:}} &&
+\text{{ current velocity:}}
  v(x, t) &= \frac{\hbar}{m} \nabla S(x, t), \\
-\text{{ osmotic velocity:}} &&
+\text{{ osmotic velocity:}} 
  u(x, t) &= \frac{\hbar}{2m} \nabla \log \rho(x, t).
 \end{align*}
 $$
