--- a/_posts/2024-06-01-dsm.md
+++ b/_posts/2024-06-01-dsm.md
@@ -1,7 +1,7 @@
 ---
 title: 'Deep Stochastic Mechanics'
 date: 2024-06-01
-permalink: /posts/24/06/dsm/
+permalink: /dsm/
 tags:
   - quantum_mechanics
   - ML
@@ -57,10 +57,8 @@ DSM takes a different approach by leveraging Nelson's stochastic mechanics [[Nel
 
 $$ 
 \begin{align*}
-\text{ current velocity: }
- v(x, t) &= \frac{\hbar}{m} \nabla S(x, t), \\
-\text{ osmotic velocity: } 
- u(x, t) &= \frac{\hbar}{2m} \nabla \log \rho(x, t).
+\text{ current velocity: } v(x, t) &= \frac{\hbar}{m} \nabla S(x, t), \\
+\text{ osmotic velocity: } u(x, t) &= \frac{\hbar}{2m} \nabla \log \rho(x, t).
 \end{align*}
 $$
 
