added references to dsm post

--- a/_posts/2024-06-01-dsm.md
+++ b/_posts/2024-06-01-dsm.md
@@ -45,8 +45,8 @@ Goal: given an initial $\psi_0(x)$, draw samples from $|\psi (x, t)|^2$ for $t \
 
 One of possible solutions is to directly solve the SE for $\psi (x, t)$ using, for example, finite difference methods. Another approach is Monte-Carlo methods that rely on random sampling. They use a variational ansatz (a parametrized wave function) to approximate the true wave function. Existing methods for solving the time-dependent SE face significant challenges: 
 * *Classical numerical solvers* require discretizing the problem on a grid, leading to an *exponential growth* in computational complexity as the dimensionality increases. 
-* *Physics-informed neural networks (PINNs)* are a NN-based version of numerical solver that also suffer from an *exponential growth* of collocation points.
-* Variational methods like *time-dependent Variational Monte Carlo (t-VMC)* can bypass the curse of dimensionality.  However, their accuracy heavily depends on choosing a suitable ansatz, which can be challenging for complex systems. Additionally, the optimization process used to find the optimal ansatz parameters may suffer from numerical instabilities, depending on the method and initial conditions.
+* *Physics-informed neural networks (PINNs)* [[Raissi, 2017]](https://www.sciencedirect.com/science/article/pii/S0021999118307125) are a NN-based version of numerical solver that also suffer from an *exponential growth* of collocation points.
+* Variational methods like *time-dependent Variational Monte Carlo (t-VMC)* [[Carleo, 2017]](https://journals.aps.org/prx/abstract/10.1103/PhysRevX.7.031026) can bypass the curse of dimensionality. However, their accuracy heavily depends on choosing a suitable ansatz (good priors on $\psi$￼ to be effective). Additionally, the optimization process used to find the optimal ansatz parameters may suffer from numerical instabilities, depending on the method and initial conditions.
 
 > What if we can directly sample from the density $\vert \psi (x, t)\vert^2$ without estimating a wave function $\psi(x, t)$?
 
@@ -214,7 +214,7 @@ Let's try to run simulation for more particles:
 </pre>
 
 ![F3](../../../../images/densities_compare_high_d.pdf?raw=true | width=10)
-\<div align="center"> Probability density plots for different numbers of interacting particles $d$. For five particles, our computer system does not allow running the Crank-Nicolson solver. </div>
+<div align="center"> Probability density plots for different numbers of interacting particles $d$. For five particles, our computer system does not allow running the Crank-Nicolson solver. </div>
 
 <pre>
 
@@ -245,9 +245,18 @@ There are more experiments, including scaling studies, in our [full DSM paper](h
 
 ---
 Since our DSM algorithm is a totally new approach for simulating quantum dynamics (solving time-dependent Schrodinger equation), which could be an alternative to t-VMC methods,  there are still some **challenges to resolve**. For example:
-- Studied relatively simple bosonic systems (though existing methods still struggle): how to extend our approach to fermions?
-- Considered a linear spinless SE on a flat manifold with a smooth potential
+- We studied relatively simple bosonic systems (though existing methods still struggle). How to extend our approach to fermions?
+- We considered a linear spinless SE on a flat manifold with a smooth potential
 - More detailed study of our algorithms itself, including more precise error bounds
+
+
+## References
+
+1. Nelson, Edward. "Derivation of the Schrödinger equation from Newtonian mechanics." Physical review 150.4 (1966): 1079.
+
+2. Raissi, Maziar, Paris Perdikaris, and George E. Karniadakis. "Physics-informed neural networks: A deep learning framework for solving forward and inverse problems involving nonlinear partial differential equations." Journal of Computational physics 378 (2019): 686-707.
+
+3. Carleo, Giuseppe, et al. "Unitary dynamics of strongly interacting bose gases with the time-dependent variational monte carlo method in continuous space." Physical Review X 7.3 (2017): 031026.
 
 
 
