--- a/_publications/2023-dsm.md
+++ b/_publications/2023-dsm.md
@@ -5,11 +5,11 @@ collection: publications
 # excerpt: 'We introduce a novel deep-learning-based approach for numerical simulation of a time-evolving Schrödinger equation inspired by stochastic mechanics and generative diffusion models. Depending on the latent dimension, our method may have far lower computational complexity in higher dimensions compared to existing approaches. Experiments verify our theoretical findings and show a significant advantage of our method compared to other deep-learning-based approaches used for quantum mechanics.'
 excerpt: ''
 date: 2024-06-01
-venue: 'ICML 2024'
+venue: 'ICML'
 #paperurl: 'http://academicpages.github.io/files/paper2.pdf'
 citation: 'E. Orlova, A. Ustimenko, R. Jiang, P. Y Lu, R. Willett'
 ---
 
 This paper introduces a novel deep-learning-based approach for numerical simulation of a time-evolving Schrödinger equation inspired by stochastic mechanics and generative diffusion models. Unlike existing approaches, which exhibit computational complexity that scales exponentially in the problem dimension, our method allows us to adapt to the latent low-dimensional structure of the wave function by sampling from the Markovian diffusion. Depending on the latent dimension, our method may have far lower computational complexity in higher dimensions. Moreover, we propose novel equations for stochastic quantum mechanics, resulting in quadratic computational complexity with respect to the number of dimensions. Numerical simulations verify our theoretical findings and show a significant advantage of our method compared to other deep-learning-based approaches used for quantum mechanics.
 
-[Paper](https://arxiv.org/abs/2305.19685) [Code](https://github.com/elena-orlova/deep-stochastic-mechanics)
+[Paper](https://arxiv.org/abs/2305.19685) [Code](https://github.com/elena-orlova/deep-stochastic-mechanics) [Post](https://elena-orlova.github.io/dsm/)
