updated DSM links

--- a/_posts/2024-06-01-dsm.md
+++ b/_posts/2024-06-01-dsm.md
@@ -8,11 +8,11 @@ tags:
   - generative_models
 ---
 
-This post is based on ["Deep Stochastic Mechanics"](https://arxiv.org/abs/2305.19685) paper. Here, we'd like to explain main ideas and show some results from this paper.
+This post is based on ["Deep Stochastic Mechanics"](https://proceedings.mlr.press/v235/orlova24a.html) paper. Here, we'd like to explain the main ideas and show some results from this paper.
 
-In the field of quantum physics, accurately simulating and predicting the behavior of particles is a computationally challenging task due to the curse of dimensionality. The computational complexity grows exponentially as the number of particles in the system increases, making it difficult to study large-scale quantum systems using traditional methods.
+In quantum physics, accurately simulating and predicting the behavior of particles is a computationally challenging task due to the curse of dimensionality. The computational complexity grows exponentially as the number of particles in the system increases, making it difficult to study large-scale quantum systems using traditional methods.
 
-Enter Deep Stochastic Mechanics (DSM), a novel approach that leverages deep learning to simulate quantum dynamics efficiently. It is a neural network(NN)-based method that directly samples from the probability density of the wave function, bypassing the need to explicitly estimate the wave function itself.
+Enter Deep Stochastic Mechanics (DSM), a novel approach that leverages deep learning to simulate quantum dynamics efficiently. It is a neural network(NN)--based method that directly samples from the probability density of the wave function, bypassing the need to estimate the wave function itself explicitly.
 
 
 Solving Schrödinger equation
@@ -39,16 +39,16 @@ $$\rho(x,t) = |\psi (x, t)|^2.$$
 
 ---
 
-Goal: given an initial $\psi_0(x)$, draw samples from $|\psi (x, t)|^2$ for $t \in (0,T]$. 
+Goal: given an initial wave function  $\psi_0(x)$, draw samples from $|\psi (x, t)|^2$ for $t \in (0,T]$. 
 ---
 
 
-One of possible solutions is to directly solve the SE for $\psi (x, t)$ using, for example, finite difference methods. Another approach is Monte-Carlo methods that rely on random sampling. They use a variational ansatz (a parametrized wave function) to approximate the true wave function. Existing methods for solving the time-dependent SE face significant challenges: 
+One of the possible solutions is to directly solve the SE for $\psi (x, t)$ using, for example, finite difference methods. Another approach is Monte-Carlo methods which rely on random sampling. They use a variational ansatz (a parametrized wave function) to approximate the true wave function. Existing methods for solving the time-dependent SE face significant challenges: 
 * *Classical numerical solvers* require discretizing the problem on a grid, leading to an *exponential growth* in computational complexity as the dimensionality increases. 
-* *Physics-informed neural networks (PINNs)* [[Raissi, 2017]](https://www.sciencedirect.com/science/article/pii/S0021999118307125) are a NN-based version of numerical solver that also suffer from an *exponential growth* of collocation points.
+* *Physics-informed neural networks (PINNs)* [[Raissi, 2017]](https://www.sciencedirect.com/science/article/pii/S0021999118307125) are an NN-based version of numerical solver that also suffer from an *exponential growth* of collocation points.
 * Variational methods like *time-dependent Variational Monte Carlo (t-VMC)* [[Carleo, 2017]](https://journals.aps.org/prx/abstract/10.1103/PhysRevX.7.031026) can bypass the curse of dimensionality. However, their accuracy heavily depends on choosing a suitable ansatz (good priors on $\psi$￼ to be effective). Additionally, the optimization process used to find the optimal ansatz parameters may suffer from numerical instabilities, depending on the method and initial conditions.
 
-> What if we can directly sample from the density $\vert \psi (x, t)\vert^2$ without estimating a wave function $\psi(x, t)$?
+> What if we can directly sample from the density $\vert \psi (x, t)\vert^2$ without estimating the wave function $\psi(x, t)$?
 
 DSM method
 ======
@@ -133,7 +133,7 @@ $$
 
 * The trajectories are generated iteratively in time: $X^\theta_{i+1} = X^\theta_{i} + \big(v_{\theta}(X^\theta_{i}, t_{i})+ u_{\theta}(X^\theta_{i}, t_{i}) \big)\epsilon + z$.
 * At every epoch, generate a batch of trajectories $\{ X^\theta_{i, j} \}$, where $i$ corresponds to the time step and ￼$j$ is the number of samples.
-* Then these trajectories are used to evaluate the loss function and update the models’ weights.
+* These trajectories are used to evaluate the loss function and update the models’ weights.
 
 <pre>
 
@@ -148,7 +148,7 @@ $$
 
 ---
 
-Instead of explicitly estimating the wave function $\psi(x, t)$, DSM directly samples from the probability density $\vert \psi(x, t)\vert^2$ by parametrizing the velocities of the diffusion process using neural networks.
+Instead of explicitly estimating the wave function $\psi(x, t)$, DSM directly samples from the corresponding probability density $\vert \psi(x, t)\vert^2$ by parametrizing the velocities of the diffusion process using neural networks.
 ---
 
 
@@ -188,8 +188,8 @@ $$
 where $g$ controls the interaction strength. 
 
 * A numerical solution (Crank-Nicolson method) as a baseline. Comparison with PINNs and t-VMC. 
-* Comparing density and some statistics (mean and variance of coordinate as function of time). 
-* A NN architecture for DSM/PINN: a feed-forward linear model with skip connections and tanh activations.
+* Comparing density and some statistics (mean and variance of coordinate as a function of time). 
+* An NN architecture for DSM/PINN: a feed-forward linear model with skip connections and tanh activations.
 * A t-VMC ansatz representation: Hermite polynomials with two-body interaction terms that inherently incorporate knowledge about the ground truth solution. NN ansatz parameterization did not yield satisfactory results.
 
 
@@ -205,7 +205,7 @@ where $g$ controls the interaction strength.
 </pre>
 
 
-Let's try to run simulation for more particles:
+Let's try to run the simulation for more particles:
 * The proposed DSM approach demonstrates robust performance, accurately following the ground truth and providing reasonable predictions for $d = 3, 4, 5$ interacting bosons
 * Our findings indicate that the t-VMC method can perform reasonably for low-dimensional systems, but its performance degrades as the number of interacting particles increases. This highlights the need for a scalable and carefully designed ansatz representation capable of capturing the complex behavior of particles in high-dimensional quantum systems.
 
@@ -234,7 +234,7 @@ There are more experiments, including scaling studies, in our [full DSM paper](h
 -   The experiments show ${\color{2D9090}\text{better performance}}$  of our method compared to the numerical solvers/PINNs/t-VMC both in terms of prediction quality and computation time
  -->
 
- -   Developed **new efficient computational method** for simulating quantum dynamics based on **Nelson’s stochastic mechanics**
+ -   Developed the **new efficient computational method** for simulating quantum dynamics based on **Nelson’s stochastic mechanics**
 
   -   Relies on *Markovian diffusion* and *does not require training data*
   -   *Adaptive* to latent low-dimensional support of density
@@ -244,7 +244,7 @@ There are more experiments, including scaling studies, in our [full DSM paper](h
 
 
 ---
-Since our DSM algorithm is a totally new approach for simulating quantum dynamics (solving time-dependent Schrodinger equation), which could be an alternative to t-VMC methods,  there are still some **challenges to resolve**. For example:
+Since our DSM algorithm is a new approach for simulating quantum dynamics (solving time-dependent Schrodinger equation), which could be an alternative to t-VMC methods,  there are still some **challenges to resolve**. For example:
 - We studied relatively simple bosonic systems (though existing methods still struggle). How to extend our approach to fermions?
 - We considered a linear spinless SE on a flat manifold with a smooth potential
 - More detailed study of our algorithms itself, including more precise error bounds
