--- a/_publications/2023-dsm.md
+++ b/_publications/2023-dsm.md
@@ -12,4 +12,25 @@ citation: 'E. Orlova, A. Ustimenko, R. Jiang, P. Y Lu, R. Willett'
 
 This paper introduces a novel deep-learning-based approach for numerical simulation of a time-evolving Schrödinger equation inspired by stochastic mechanics and generative diffusion models. Unlike existing approaches, which exhibit computational complexity that scales exponentially in the problem dimension, our method allows us to adapt to the latent low-dimensional structure of the wave function by sampling from the Markovian diffusion. Depending on the latent dimension, our method may have far lower computational complexity in higher dimensions. Moreover, we propose novel equations for stochastic quantum mechanics, resulting in quadratic computational complexity with respect to the number of dimensions. Numerical simulations verify our theoretical findings and show a significant advantage of our method compared to other deep-learning-based approaches used for quantum mechanics.
 
-[Paper](https://arxiv.org/abs/2305.19685) [Code](https://github.com/elena-orlova/deep-stochastic-mechanics) [Post](https://elena-orlova.github.io/dsm/)
+
+[Paper](https://proceedings.mlr.press/v235/orlova24a.html) [Code](https://github.com/elena-orlova/deep-stochastic-mechanics) [Post](https://elena-orlova.github.io/dsm/)
+
+Citation: 
+
+``
+@InProceedings{pmlr-v235-orlova24a,
+  title = 	 {Deep Stochastic Mechanics},
+  author =       {Orlova, Elena and Ustimenko, Aleksei and Jiang, Ruoxi and Lu, Peter Y. and Willett, Rebecca},
+  booktitle = 	 {Proceedings of the 41st International Conference on Machine Learning},
+  pages = 	 {38779--38814},
+  year = 	 {2024},
+  editor = 	 {Salakhutdinov, Ruslan and Kolter, Zico and Heller, Katherine and Weller, Adrian and Oliver, Nuria and Scarlett, Jonathan and Berkenkamp, Felix},
+  volume = 	 {235},
+  series = 	 {Proceedings of Machine Learning Research},
+  month = 	 {21--27 Jul},
+  publisher =    {PMLR},
+  pdf = 	 {https://raw.githubusercontent.com/mlresearch/v235/main/assets/orlova24a/orlova24a.pdf},
+  url = 	 {https://proceedings.mlr.press/v235/orlova24a.html},
+  abstract = 	 {This paper introduces a novel deep-learning-based approach for numerical simulation of a time-evolving Schrödinger equation inspired by stochastic mechanics and generative diffusion models. Unlike existing approaches, which exhibit computational complexity that scales exponentially in the problem dimension, our method allows us to adapt to the latent low-dimensional structure of the wave function by sampling from the Markovian diffusion. Depending on the latent dimension, our method may have far lower computational complexity in higher dimensions. Moreover, we propose novel equations for stochastic quantum mechanics, resulting in quadratic computational complexity with respect to the number of dimensions. Numerical simulations verify our theoretical findings and show a significant advantage of our method compared to other deep-learning-based approaches used for quantum mechanics.}
+}
+``
