samll fix in link

--- a/_posts/2024-06-01-dsm.md
+++ b/_posts/2024-06-01-dsm.md
@@ -220,7 +220,7 @@ Let's try to run the simulation for more particles:
 
 </pre>
 
-There are more experiments, including scaling studies, in our [full DSM paper](https://arxiv.org/abs/2305.19685).
+There are more experiments, including scaling studies, in our [full paper](https://proceedings.mlr.press/v235/orlova24a.html).
 
 
 ## Conclusions
